# sm-core-lab

./: .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CONTENT.md  Justfile  pyproject.toml
answers/: .gitignore
answers/lab1-core/1_essentials/: lab1_essentials.ipynb
answers/lab1-core/2_preprocessing/: preprocessing_core.ipynb
answers/lab2-boyl/: sklearn.ipynb
answers/lab2-boyl/src/: requirements.txt
answers/lab3-sdk/: preprocessing_sdk.ipynb  training_tuning_sdk.ipynb
answers/lab3-sdk/src/: inference.py  train.py
answers/lab4-pipeline/: sagemaker-pipeline.ipynb
answers/lab4-pipeline/src/: evaluate.py  preprocessing.py  train.py
answers/pipeline/: sagemaker-pipeline.ipynb
answers/pipeline/src/: inference.py  requirements.txt
aws/: get_started.ipynb
labs/: 1_SageMaker_Essentials_Guide.md  1_essentials.md  3_Pipelines.md  3_SageMaker_Pipelines_Guide.md  SageMaker_Essentials_Guide.md  assignment-1.md  bring your own lib.md  churn.csv.bz2  essentials.md  xgboost_local.ipynb
labs/answers/: scratchpad.ipynb
labs/lab1/: 1_SageMaker_Essentials_Guide.md  2_Preprocessing_Assignment_Guide.md  xgboost_local.ipynb
labs/lab2/: BYOL_Assignment_Guide.md
labs/lab3/: Assignment_0 Containers.md  Assignment_1_Processing.md  Assignment_2_Training.md  Assignment_3_Tuning.md  Assignment_4_Deployment.md  Assignment_5_Registry.md  README.md  SageMaker_SDK_Components_Guide.md
labs/lab4/: SageMaker_Pipelines_Guide.md
labs/resources/: frankfurt_ec2_pricing.csv  pricing.ipynb
labs/training/: core.ipynb  sagemaker_sdk.ipynb  scratchpad.ipynb
src/corelab/core/: session.py  (+1 more)
(+16 files in other folders)
