[project]
name = "corelab"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.28,<2",
    "itables>=2.5.2",
    "pandas>=2.3.2",
    "pandas-stubs==2.3.2.250827",
    "sagemaker[local]>=2.251.1",
    "sagemaker-training>=5.1.0",
    "scikit-learn>=1.7.1",
    "xgboost~=1.7.0",
    "boto3-stubs==1.40.49",
]

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["corelab*"]

[tool.uv]
dev-dependencies = [
    "ipywidgets>=8.1.7",
    "jupyterlab",
    "matplotlib>=3.10.6",
    "nbstripout>=0.8.1",
    "pip>=25.2",
    "pre-commit>=3.5.0",
    "ruff>=0.12.12",
    "seaborn>=0.13.2",
]
